validation-test/compiler_crashers_2_fixed/Inputs/0068-sr3853/other.swift
@@ -1,0 +1,13 @@
+import BaseLib
+
+extension Base {
+#if VALID
+  convenience init(foo: String) {
+    fatalError()
+  }
+#else
+  init(foo: String) {
+    fatalError()
+  }
+#endif
+}
